tests/instantiating/delay_invalid_type/stderr.golden
error: delay property must be of type time, current type string
bus.fbd +3:11
   |
 3 | 		delay = "lorem"
   | 		        ^^^^^^^
